nav chrome collapse fix. other minor updates

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,7 @@
+app-header {
+  min-height: max-content;
+}
+
 #cloud-scroll {
   background: url('../assets/img/clouds.png') repeat-x;
   background-size: cover;
